# obsidian-agent

./: .gitignore  .tmuxp.yaml  README.md  pyproject.toml
.scratch/: REPO_RULES.md
.scratch/projects/: README.md
.scratch/projects/00-obsidian-agent-implementation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/01-obsidian-agent-refactor/: CONCEPT.md  CONCEPT_SPEC_REVIEW.md  LLM_INTERFACE_RESEARCH_REPORT.md  MIRASCOPE_PYDANTIC_RESEARCH_COMPARISON.md  OBSIDIAN_AGENT_IMPLEMENTATION_GUIDE_V2.md  OBSIDIAN_AGENT_README.md  SPEC.md
.scratch/projects/02-analysis-and-code-review/: ASSUMPTIONS.md  CODE_REVIEW.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md  REVIEW_REFACTORING_GUIDE.md  TEST_SUITE_REVIEW.md
.scratch/projects/03-refactor-for-forge/: IMPLEMENTATION_LOG.md  REVIEW_REFACTOR_GUIDE.md
.scratch/projects/04-additional-functionality-refactor/: OBSIDIAN_AGENT_EXPANSION_IMPLEMENTATION_GUIDE.md
.scratch/projects/06-obsidian-ops-update/: OBSIDIAN_OPS_UPDATE_ANALYSIS.md  OBSIDIAN_OPS_UPDATE_REFACTOR.md
.scratch/projects/07-queue-refactor/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  OBSIDIAN_AGENT_QUEUE_REFACTOR_CONCEPT.md  PLAN.md  PROGRESS.md  SPEC.md
demo-vault/: README.md  index.md
demo-vault/.obsidian/: workspace.json
obsidian-agent_demo-vault/: README.md  demo-walkthrough.md  index.md
scripts/: demo_walkthrough.py
src/obsidian_agent/: __init__.py  __main__.py  agent.py  app.py  config.py  demo.py  fs_atomic.py  locks.py  models.py  page_context.py  prompt.py  queue.py  rate_limit.py  scope.py  tools.py  vcs.py  web_paths.py
src/obsidian_agent/interfaces/: __init__.py  command.py  forge_web.py
src/obsidian_agent/routes/: __init__.py  agent_routes.py  job_routes.py  vault_routes.py
tests/: conftest.py  test_agent.py  test_app.py  test_config.py  test_demo.py  test_e2e.py  test_fs_atomic.py  test_integration.py  test_interfaces.py  test_locks.py  test_models.py  test_page_context.py  test_prompt.py  test_queue.py  test_scope.py  test_tools.py  test_vault_routes.py  test_vcs.py  test_web_paths.py
tests/fixtures/: README.md
tests/fixtures/vaults/app/: note.md
tests/fixtures/vaults/basic/: note.md
tests/fixtures/vaults/basic/Projects/: Alpha.md
tests/fixtures/vaults/integration/: README.md
tests/fixtures/vaults/integration/Projects/: Alpha.md  Beta.md
tests/fixtures/vaults/tools/: block.md  plain.md
tests/fixtures/vaults/tools/Projects/: Alpha.md
tests/support/: __init__.py  vault_fs.py
