[project]
name = "obsidian-agent"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = [
    "obsidian-ops",
    "pydantic-ai>=1.7,<2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.25.0",
    "anyio>=4.0",
    "coverage>=7.0",
]

[tool.uv.sources]
obsidian-ops = { git = "https://github.com/Bullish-Design/obsidian-ops.git", tag = "v0.5.0" }

[project.scripts]
obsidian-agent = "obsidian_agent.__main__:main"
obsidian-agent-demo = "obsidian_agent.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
